--- a/CAASera/app/src/main/res/layout/activity_main.xml
+++ b/CAASera/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,35 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.richardo4578.caasera.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login" />
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:layout_marginTop="51dp"
+        android:id="@+id/edtLoginName"
+        android:hint="Username"
+        android:layout_below="@+id/lblAccount" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:layout_below="@+id/edtLoginName"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/edtPassword"
+        android:hint="Password" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Your account for everything Cassera."
+        android:textSize="20sp"
+        android:typeface="normal"
+        android:textStyle="normal|bold"
+        android:id="@+id/lblAccount"
+        android:layout_marginTop="107dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
