--- a/CAASera/app/src/main/res/layout/activity_main.xml
+++ b/CAASera/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -9,6 +10,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.richardo4578.caasera.MainActivity">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Your account for everything Cassera."
+        android:textSize="20sp"
+        android:typeface="normal"
+        android:textStyle="normal|bold"
+        android:id="@+id/lblAccount"
+        android:layout_marginTop="107dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="match_parent"
@@ -30,15 +43,32 @@
         android:id="@+id/edtPassword"
         android:hint="Password" />
 
-    <TextView
+    <Button
+        android:text="Login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your account for everything Cassera."
-        android:textSize="20sp"
-        android:typeface="normal"
-        android:textStyle="normal|bold"
-        android:id="@+id/lblAccount"
-        android:layout_marginTop="107dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginTop="13dp"
+        android:id="@+id/btnLogin"
+        android:layout_below="@+id/edtPassword"
+        android:layout_centerHorizontal="true"
+        android:onClick="btnLoginOnClick" />
+
+    <Button
+        android:text="Cancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnCancel"
+        android:layout_below="@+id/btnLogin"
+        android:layout_alignParentStart="true"
+        android:onClick="btnCancelOnClick" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/CAASeraBanner"
+        android:id="@+id/imgCAASeraBanner"
+        android:layout_marginBottom="75dp"
+        android:layout_above="@+id/edtPassword"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
