Toast functionality added & added new activity.

--- a/CAASera/app/src/main/res/layout/activity_main.xml
+++ b/CAASera/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Your account for everything Cassera."
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:typeface="normal"
-        android:textStyle="normal|bold"
         android:id="@+id/lblAccount"
         android:layout_marginTop="107dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:fontFamily="sans-serif" />
 
     <EditText
         android:layout_width="match_parent"
@@ -65,10 +67,10 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/CAASeraBanner"
-        android:id="@+id/imgCAASeraBanner"
-        android:layout_marginBottom="75dp"
-        android:layout_above="@+id/edtPassword"
+        app:srcCompat="@drawable/banner"
+        android:id="@+id/imgBanner"
+        android:layout_marginBottom="54dp"
+        android:layout_above="@+id/edtLoginName"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
