--- a/CAASera/app/src/main/res/layout/activity_landing1.xml
+++ b/CAASera/app/src/main/res/layout/activity_landing1.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_landing1"
     android:layout_width="match_parent"
@@ -9,5 +10,54 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.richardo4578.caasera.Landing1">
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="130dp"
+        android:weightSum="1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="216dp">
+
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="101dp"
+            app:srcCompat="@drawable/golfball"
+            android:id="@+id/imageView6" />
+
+        <ImageView
+            android:layout_width="110dp"
+            android:layout_height="105dp"
+            app:srcCompat="@drawable/basketball"
+            android:id="@+id/imageView5" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="102dp"
+            app:srcCompat="@drawable/golfball"
+            android:id="@+id/imageView4" />
+
+    </LinearLayout>
+
+    <Button
+        android:text="Login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnLogin"
+        android:layout_weight="1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:onClick="btnLoginOnClick" />
+
+    <Button
+        android:text="Free Trial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/btnLogin"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/btnFreeTrial" />
 
 </RelativeLayout>
